Agrego configuraciones de OSADA para que acepte las libSockets, modifico las libSockets agregandole respuestas y agrego algunas funciones que usa el truncate

--- a/OSADA_FS/.project
+++ b/OSADA_FS/.project
@@ -3,6 +3,7 @@
 	<name>OSADA_FS</name>
 	<comment></comment>
 	<projects>
+		<project>libTeamRocket</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
